# DataSciencePractices

Data Visualization/: Data Visualization Project NBA Trends.ipynb
Exploratory Data Analysis/: EDADiagnosingDiabetes.ipynb
Linear Regression Model From Scratch/: Linear Regression Model from Scratch.ipynb
LinearAlgebra/LinearCombination/: LinearCombination.ipynb
LinearAlgebra/LinearMapping/.ipynb_checkpoints/: CurrencyConversionMatrix-checkpoint.ipynb  Visualizing Matrix Multiplication-checkpoint.ipynb
Statistics/Probability/Gaussian_Distribution/: Gaussian_Class.ipynb  numbers2.txt
Statistics/Probability/Gaussian_Distribution/.ipynb_checkpoints/: Gaussian_Class-checkpoint.ipynb
Statistics/Probability/oztimur-distribution/: setup.py
Statistics/Probability/oztimur-distribution/oztimur_probability/: Binomialdistribution.py  Gaussiandistribution.py  README.md  setup.cfg
Statistics/Probability/probability-distrubiton-jupyter/.ipynb_checkpoints/: Gaussian_Class-checkpoint.ipynb
U.S. Medical Insurance Cost/: us-medical-insurance-costs.ipynb
