[metadata]
name = oztimur-probability
version = 0.3
author = Irem Oztimur
author_email = iremoztimur07@gmail.com
description = A Python package for probability distributions (Gaussian and Binomial)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IremOztimur
license = MIT

[options]
packages = find:
install_requires =
    matplotlib>=3.
python_requires = >=3.6
